# ETL-CVM

./: 02_data_analysis_spark.ipynb  03_definitive_data_analysis_CVM.ipynb  03_refined_data_analysis.ipynb  CVM_Scraping.ipynb  LICENSE  poc-bs.ipynb  pyproject.toml  requirements.txt
notebooks/: 01_data_scraping.ipynb  outlier_remove.ipynb
notebooks/analysis/: 01_data_analysis_spark.ipynb  02_refined_data_analysis.ipynb  03_definitive_data_analysis_CVM.ipynb
src/scrapers/: cvm_scrapper.py
src/scrapers/interface/: scrapper_interface.py
src/soups/: soup_generator.py
