[tool.poetry]
name = "etl-cvm"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"
packages = [{ include = "etl_cvm" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.2"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.11.1"
pyarrow = "^10.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
