[tool.poetry]
name = "etl-cvm"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"
packages = [{include = "etl_cvm"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
pyod = "^1.0.7"
numba = "^0.56.4"
pyarrow = "^11.0.0"
findspark = "^2.0.1"
pyspark = "^3.3.2"
plotly = "^5.13.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
